--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   shimmer: ^3.0.0
   socket_io_client: ^2.0.3+1
   flutter_webrtc: ^0.11.2
+  flutter_spinkit: ^5.2.1
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
